--- a/config.ini
+++ b/config.ini
@@ -3,3 +3,11 @@ port = 8883
 user = client1
 password = aineekeechohdoo7haecah3r
 
+[172.20.19.48]
+user = psqlar
+password = Hgft667rD454w4e
+
+[other]
+ini_path = /Users/suazovroman/PycharmProjects/mqtt_messages/mqtt_messages/config.ini
+ini_name = config.ini
+
