--- a/config.ini
+++ b/config.ini
@@ -8,6 +8,6 @@ user = psqlar
 password = Hgft667rD454w4e
 
 [other]
-ini_path = /Users/suazovroman/PycharmProjects/mqtt_messages/mqtt_messages/config.ini
+ini_path = C:\Users\roman\PycharmProjects\mqtt_messages\mqtt_messages\config.ini
 ini_name = config.ini
 
