config mqtt ini reading

--- a/config.ini
+++ b/config.ini
@@ -6,6 +6,9 @@ password = aineekeechohdoo7haecah3r
 [172.20.19.48]
 user = psqlar
 password = Hgft667rD454w4e
+port = 5432
+database = postgres
+host = 172.20.19.48
 
 [other]
 ini_path = C:\Users\roman\PycharmProjects\mqtt_messages\mqtt_messages\config.ini
