--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,10 @@
-[93.188.43.181]
+[MQTT]
 host = 93.188.43.181
 port = 8883
 user = client1
 password = aineekeechohdoo7haecah3r
 
-[172.20.19.48]
+[POSTGRE]
 user = psqlar
 password = Hgft667rD454w4e
 port = 5432
